--- a/dealer/public/adminbsb-materialdesign/css/style.css
+++ b/dealer/public/adminbsb-materialdesign/css/style.css
@@ -8212,5 +8212,5 @@ html.ie11 .dropdown-menu ul.menu li a {
 html.ie11 .bs-searchbox .form-control {
   width: 90%; }
 .myborder{
-    border:1px solid #dddddd !important;
+    border:1px solid #c4c4c4 !important;
 }
