[ 修改 ] 訂單價格修正

--- a/dealer/public/adminbsb-materialdesign/css/style.css
+++ b/dealer/public/adminbsb-materialdesign/css/style.css
@@ -8214,3 +8214,7 @@ html.ie11 .bs-searchbox .form-control {
 .myborder{
     border:1px solid #c4c4c4 !important;
 }
+.mysearchbox{
+    border:1px solid #d4d4d4 !important;
+    margin-bottom:50px !important;
+}
