--- a/dealer/public/adminbsb-materialdesign/css/cart.css
+++ b/dealer/public/adminbsb-materialdesign/css/cart.css
@@ -329,6 +329,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f93434', end
 }
 #footer{
     height:auto;
+    padding-bottom: 100px;
 }
 #dealerInfo>h3 {
 	text-align: center;
@@ -340,6 +341,15 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f93434', end
 	width: 300px!important;
 	padding: 15px;	
 }
+#phoneBar{
+	background-color: #e3e3e3;
+	padding-top: 15px;
+	padding-bottom: 15px;
+	position: fixed;
+	left:0px;
+	bottom: 0px;
+	width: 100%;
+}
 }
 @media (min-width: 768px) and (max-width: 991px) {
 ._w{
@@ -350,6 +360,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f93434', end
 }
 #footer{
     height:auto;
+    padding-bottom: 100px;
 }
 #dealerInfo>h3{
 	text-align: center;
@@ -363,6 +374,15 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f93434', end
 .cartList{
 	width: 300px!important;
 	padding: 15px;	
+}
+#phoneBar{
+	background-color: #e3e3e3;
+	padding-top: 15px;
+	padding-bottom: 15px;
+	position: fixed;
+	left:0px;
+	bottom: 0px;
+	width: 100%;
 }
 }
 @media (min-width: 992px) {
