--- a/dealer/public/adminbsb-materialdesign/css/cart.css
+++ b/dealer/public/adminbsb-materialdesign/css/cart.css
@@ -320,6 +320,32 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f93434', end
 	height: 60px;
 	overflow-y: hidden; 
 }
+
+/* 快速分類 */
+#fastBox{
+	margin-top: 150px;
+	padding-top: 40px!important;
+
+}
+.fastItem>div{
+	margin: 0 auto;
+	width: 100px;
+	height: 100px;
+	/*border:2px solid #ee526d;*/
+	box-shadow: 2px 2px 5px #101010;
+	margin-bottom: 10px;
+    border-radius: 10px;
+    font-size: 20px;
+    font-weight: 900;
+    color: #333;
+    text-align: center;
+    line-height: 96px;
+	background-image: rgb(249,52,52); /* Old browsers */
+    background-image: -moz-linear-gradient(45deg, rgba(249,52,52,1) 0%, rgba(226,111,167,1) 100%); /* FF3.6-15 */
+    background-image: -webkit-linear-gradient(45deg, rgba(249,52,52,1) 0%,rgba(226,111,167,1) 100%); /* Chrome10-25,Safari5.1-6 */
+    background-image: linear-gradient(45deg, rgba(249,52,52,1) 0%,rgba(226,111,167,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f93434', endColorstr='#e26fa7',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+}
 @media (max-width: 767px) {
 ._w{
 	display: none!important;
@@ -342,7 +368,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f93434', end
 	padding: 15px;	
 }
 #phoneBar{
-	background-color: #e3e3e3;
+	background-color:#3a3a3a;
 	padding-top: 15px;
 	padding-bottom: 15px;
 	position: fixed;
@@ -350,6 +376,24 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f93434', end
 	bottom: 0px;
 	width: 100%;
 }
+#phoneBar a {
+	color:#ee526d;
+	font-weight: 900;
+}
+#fastInner{
+	padding:0px!important;
+}
+.fastItem{
+    padding:2px!important;
+}
+.fastItem>div{
+
+	height: 40px;
+	width: 40px;
+	line-height: 36px;
+	font-size: 12px;
+}
+
 }
 @media (min-width: 768px) and (max-width: 991px) {
 ._w{
@@ -376,13 +420,17 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f93434', end
 	padding: 15px;	
 }
 #phoneBar{
-	background-color: #e3e3e3;
+	background-color: #3a3a3a;
 	padding-top: 15px;
 	padding-bottom: 15px;
 	position: fixed;
 	left:0px;
 	bottom: 0px;
 	width: 100%;
+}
+#phoneBar a {
+	color:#ee526d;
+	font-weight: 900;
 }
 }
 @media (min-width: 992px) {
