--- a/dealer/public/adminbsb-materialdesign/css/style.css
+++ b/dealer/public/adminbsb-materialdesign/css/style.css
@@ -8218,3 +8218,19 @@ html.ie11 .bs-searchbox .form-control {
     border:1px solid #d4d4d4 !important;
     margin-bottom:50px !important;
 }
+
+.stockbox{
+    position: relative;
+}
+.stockbox div{
+    position: absolute;
+    top:0px;
+    right: -160px;
+    height: auto;
+    width: 160px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    background-color: #e3e3e3;
+    z-index: 200;
+    display: none;
+}
