--- a/dealer/public/adminbsb-materialdesign/css/cart.css
+++ b/dealer/public/adminbsb-materialdesign/css/cart.css
@@ -412,7 +412,10 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f93434', end
 ._p{
 	display: block;
 }
-
+._psp{
+	padding-left: 5px!important;
+	padding-right: 5px!important;
+}
 #navItem > li > a{
 	font-size: 14px;
 	padding-top: 5px;
