--- a/dealer/public/adminbsb-materialdesign/css/cart.css
+++ b/dealer/public/adminbsb-materialdesign/css/cart.css
@@ -405,6 +405,10 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f93434', end
 #navItem .dropdown-menu>li>a:hover{
 	color: #3a3a3a;
 }
+#phonebox{
+	float: left;
+
+}
 @media (max-width: 767px) {
 ._w{
 	display: none!important;
@@ -478,6 +482,11 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f93434', end
     text-overflow : ellipsis;
     font-size: 12px;
 }
+#phonebox{
+	height: 34px;
+	margin-top: 8px;
+	width: calc(100% - 198px);
+}
 }
 @media (min-width: 768px) and (max-width: 991px) {
 ._w{
@@ -531,6 +540,10 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f93434', end
     white-space : nowrap;
     text-overflow : ellipsis;
     font-size: 16px;
+}
+#phonebox{
+	height: 34px;
+	margin-top: 8px;
 }
 }
 @media (min-width: 992px) {
