--- a/dealer/public/adminbsb-materialdesign/css/cart.css
+++ b/dealer/public/adminbsb-materialdesign/css/cart.css
@@ -194,7 +194,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f93434', end
 
 /* 頁腳 */
 #footer{
-	border-top:2px solid #252525;
+	/*border-top:2px solid #252525;*/
 	height: 100px;
 	background-color: #131313;
 	/*box-shadow: 10px 2px 40px -21px #e8308c;*/
@@ -324,7 +324,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f93434', end
 
 /* 快速分類 */
 #fastBox{
-	min-height: calc(100vh - 100px);
+	/*min-height: calc(100vh - 100px);*/
 	margin-top: 150px;
 	padding-top: 40px!important;
 
@@ -431,10 +431,11 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f93434', end
 }
 #footer{
     height:auto;
-    padding-bottom: 100px;
+    padding-bottom: 80px;
 }
 #dealerInfo>h3 {
 	text-align: center;
+	margin: 0px;
 }
 #dealerInfo>ul>li {
     text-align: center;
