[ 修改 ] 商品內頁修改

--- a/dealer/public/adminbsb-materialdesign/css/cartGoods.css
+++ b/dealer/public/adminbsb-materialdesign/css/cartGoods.css
@@ -64,6 +64,10 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f93434', end
 	color: #ee526d;
 	/*border:2px solid #e8308c;*/
 }
+#bottomAdd{
+	background-color: white;
+	margin-bottom: 40px;
+}
 @media (max-width: 767px) {
 #goodsInfo{
 	height: auto;
