--- a/dealer/public/adminbsb-materialdesign/css/cartGoods.css
+++ b/dealer/public/adminbsb-materialdesign/css/cartGoods.css
@@ -27,7 +27,7 @@
 
 #goodsDesc{
 	margin-top: 10px;
-	margin-bottom: 40px;
+	/*margin-bottom: 40px;*/
 	background-color: white;
 	overflow: hidden;
 }
@@ -67,6 +67,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f93434', end
 #bottomAdd{
 	background-color: white;
 	margin-bottom: 40px;
+	border-top: 2px solid #ee526d;
 }
 @media (max-width: 767px) {
 #goodsInfo{
