--- a/dealer/public/adminbsb-materialdesign/plugins/multi-select/css/multi-select.css
+++ b/dealer/public/adminbsb-materialdesign/plugins/multi-select/css/multi-select.css
@@ -66,7 +66,9 @@
   margin: 0;
   padding: 5px 0px 0px 5px;
   cursor: pointer;
-  color: #999;
+  /*color: #999;*/
+  color: black;
+  background-color: #F44336;
 }
 
 .ms-container .ms-selectable li.ms-elem-selectable,
